--- a/F1App/F1App.WebUI/Views/Home/Index.cshtml
+++ b/F1App/F1App.WebUI/Views/Home/Index.cshtml
@@ -7,5 +7,7 @@
     $("#HomeLink").addClass("active");
 </script>
 
-<h2>HomePage</h2>
+<div id="Home" class="col-xs-12">
+    <h2 class="text-center">HomePage</h2>
+</div>
 
