--- a/F1App/F1App.WebUI/Views/List/PilotList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/PilotList.cshtml
@@ -12,7 +12,7 @@
 
 
 <div id="JsonGenerator">
-    @Html.Action("ShowOptions", "PilotJsonOption")
+    @Html.Action("ShowPilotOptions", "JsonOptions")
 </div>
 <div id="Pilots">
     <div class="panel panel-default">
