--- a/F1App/F1App.WebUI/Views/List/PilotStandingList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/PilotStandingList.cshtml
@@ -11,7 +11,7 @@
 </script>
 
 <div id="JsonGenerator">
-    @Html.Action("ShowOptions", "PilotStandingJsonOption")
+    @Html.Action("ShowPilotStandingOptions", "JsonOptions")
 </div>
 <div id="PilotStanding">
     <div class="panel panel-default">
