--- a/F1App/F1App.WebUI/Views/List/ResultList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/ResultList.cshtml
@@ -10,7 +10,7 @@
     $("#ResultLink").addClass("active");
 </script>
 <div id="JsonGenerator">
-    @Html.Action("ShowOptions", "ResultJsonOption")
+    @Html.Action("ShowResultOptions", "JsonOptions")
 </div>
 <div id="Results">
     <div class="panel panel-default">
