--- a/F1App/F1App.WebUI/Views/List/TeamList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/TeamList.cshtml
@@ -9,7 +9,7 @@
 </script>
 
 <div id="JsonGenerator">
-    @Html.Action("ShowOptions", "TeamJsonOption")
+    @Html.Action("ShowTeamOptions", "JsonOptions")
 </div>
 <div id="Teams">
     <div class="panel panel-default">
