--- a/F1App/F1App.WebUI/Views/List/TeamStandingList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/TeamStandingList.cshtml
@@ -11,7 +11,7 @@
 </script>
 
 <div id="JsonGenerator">
-    @Html.Action("ShowOptions", "TeamStandingJsonOption")
+    @Html.Action("ShowTeamStandingOptions", "JsonOptions")
 </div>
 <div id="TeamStanding">
     <div class="panel panel-default">
