--- a/F1App/F1App.WebUI/Views/Admin/PilotListAdmin.cshtml
+++ b/F1App/F1App.WebUI/Views/Admin/PilotListAdmin.cshtml
@@ -10,12 +10,33 @@
     $("#PilotLink").addClass("active");
 </script>
 <div id="Pilots">
-    
     <div class="panel panel-default">
-        <div class="panel-heading">Pilots</div>
+        <div class="panel-heading clearfix">
+            <h4 class="panel-title pull-left" style="padding-top: 7.5px;">Pilots</h4>            
+            <div class="btn-group pull-right">
+                <button class="btn btn-info" onclick="$('#addPilot').removeAttr('hidden')"><i class="glyphicon glyphicon-plus"></i> New Pilot</button>
+            </div>
+        </div>
         <div class="panel-body">
-            @using (Html.BeginForm("EditPilot", "Admin", FormMethod.Post))
-            {
+            <div id="addPilot" hidden="hidden">
+                @using (Html.BeginForm("AddPilot","Admin"))
+                {
+                    foreach (var property in Model.First().GetType().GetProperties())
+                    {
+                        if (property.Name != "PilotId" && property.Name !="PilotStandings" && property.Name!="Team" && property.Name!="Results")
+                        {
+                            <div class="form-group col-lg-6">
+                                <label>@property.Name</label>
+                                @Html.TextBox(property.Name, null, new { @class="form-control"})
+                            </div>
+                        }
+                    }
+                    <div class="col-lg-12 text-center">
+                        <button class="btn btn-success" type="submit" value="insert">Insert</button>
+                        <button class="btn btn-danger" type="button" value="Cancel" onclick="$('#addPilot').attr('hidden','hidden')">Cancel</button>
+                    </div>
+                }
+            </div>
             <table id="pilotsTable" class="table table-striped table-bordered dt" cellspacing="0" width="100%">
                 <thead>
                     <tr>
@@ -45,7 +66,7 @@
                                 <td name="TeamId">@p.Team.TeamName (@p.Team.TeamId)</td>
                                 <td name="PilotUrl">@p.PilotUrl</td>
                                 <td class="text-center crud">
-                                    <button id="submitButton" type="button" class="btn btn-success btn-circle validate hidden"><i class="glyphicon glyphicon-ok"></i></button>
+                                    <button type="button" class="submitButton btn btn-success btn-circle validate hidden"><i class="glyphicon glyphicon-ok"></i></button>
                                     <button type="button" class="btn btn-danger btn-circle cancel hidden"><i class="glyphicon glyphicon-remove"></i></button>
                                     <button type="button" class="btn btn-success btn-circle edit"><i class="glyphicon glyphicon-edit"></i></button>
                                     <button type="button" class="btn btn-danger btn-circle remove" onclick="confirmDelete('Are you sure to delete pilot with id : '+@p.PilotId,'@Url.Action("DeletePilot", "Admin", new { pilotId = p.PilotId })')"><i class="glyphicon glyphicon-trash"></i></button>
@@ -54,7 +75,6 @@
                     }
                 </tbody>
             </table>
-            }
         </div>
     </div>
 </div>
