--- a/F1App/F1App.WebUI/Views/JsonOptions/ShowPilotOptions.cshtml
+++ b/F1App/F1App.WebUI/Views/JsonOptions/ShowPilotOptions.cshtml
@@ -79,18 +79,10 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group col-xs-3">
-                            <label class="control-label col-xs-6" for="pilotUrlDd">
-                                Pilot Url
-                            </label>
-                            <div class="col-xs-6">
-                                <select id="pilotUrlId" class="Dd form-control" column="8" withid="false">
-                                    <option value="">All</option>
-                                </select>
-                            </div>
-                        </div>
                     </div>
-                    <button type="submit" class="btn btn-success" value="Generate json url">Generate json url</button>
+                    <div class="col-lg-12 text-center" style="margin-top:5px">
+                        <button type="submit" class="btn btn-success" value="Generate json url">Generate json url</button>
+                    </div>
                 }
             </div>
         </div>
