--- a/F1App/F1App.WebUI/Views/List/TeamList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/TeamList.cshtml
@@ -13,8 +13,32 @@
 </div>
 <div id="Teams">
     <div class="panel panel-default">
-        <div class="panel-heading">Teams</div>
+        <div class="panel-heading clearfix">
+            <h4 class="panel-title pull-left" style="padding-top: 7.5px;">Teams</h4>
+            <div class="btn-group pull-right">
+                <button class="btn btn-info" onclick="$('#addTeam').removeAttr('hidden')"><i class="glyphicon glyphicon-plus"></i> New Team</button>
+            </div>
+        </div>
         <div class="panel-body">
+            <div id="addTeam" hidden="hidden">
+                @using (Html.BeginForm("AddPilot", "Admin"))
+                {
+                    foreach (var property in Model.First().GetType().GetProperties())
+                    {
+                        if (property.Name != "TeamId" && property.Name != "Pilots" && property.Name != "TeamStandings" && property.Name != "Results")
+                        {
+                            <div class="form-group col-lg-6">
+                                <label>@property.Name</label>
+                                @Html.TextBox(property.Name, null, new { @class = "form-control" })
+                            </div>
+                        }
+                    }
+                    <div class="col-lg-12 text-center">
+                        <button class="btn btn-success" type="submit" value="insert">Insert</button>
+                        <button class="btn btn-danger" type="button" value="Cancel" onclick="$('#addTeam').attr('hidden','hidden')">Cancel</button>
+                    </div>
+                }
+            </div>
             <table id="teamsTable" class="table table-striped table-bordered dt" cellspacing="0" width="100%">
                 <thead>
                     <tr>
@@ -22,16 +46,30 @@
                         <th>Name</th>
                         <th>Nationality</th>
                         <th>Wikipedia</th>
+                        <th>Pilots (Id)</th>
+                        <th>Edit</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var t in Model)
                     {
                         <tr>
-                            <td>@t.TeamId</td>
+                            <td isid="true">@t.TeamId</td>
                             <td>@t.TeamName</td>
                             <td>@t.TeamNationality</td>
                             <td>@t.TeamUrl</td>
+                            <td edit="false">
+                                @foreach(var p in @t.Pilots)
+                                {
+                                    <p>@p.PilotFName @p.PilotLName (@p.PilotId) </p>
+                                }
+                            </td>
+                            <td class="text-center crud">
+                                <button type="button" class="submitButton btn btn-success btn-circle validate hidden"><i class="glyphicon glyphicon-ok"></i></button>
+                                <button type="button" class="btn btn-danger btn-circle cancel hidden"><i class="glyphicon glyphicon-remove"></i></button>
+                                <button type="button" class="btn btn-success btn-circle edit"><i class="glyphicon glyphicon-edit"></i></button>
+                                <button type="button" class="btn btn-danger btn-circle remove" onclick="confirmDelete('Are you sure to delete team with id : '+@t.TeamId,'@Url.Action("DeleteTeam", "Admin", new { teamId = t.TeamId})')"><i class="glyphicon glyphicon-trash"></i></button>
+                            </td>
                         </tr>
                     }
                 </tbody>
