--- a/F1App/F1App.WebUI/Views/Admin/TeamListAdmin.cshtml
+++ b/F1App/F1App.WebUI/Views/Admin/TeamListAdmin.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using F1App.Domain
+@model IQueryable<Team>
 @{
     ViewBag.Title = "Team List Admin";
 }
@@ -7,42 +8,71 @@
     $(".navbar li.active").removeClass("active");
     $("#TeamLink").addClass("active");
 </script>
-
-<div id="JsonGenerator">
-    @Html.Action("ShowTeamOptions", "JsonOptions")
-</div>
 <div id="Teams">
     <div class="panel panel-default">
-        <div class="panel-heading">Teams</div>
+        <div class="panel-heading clearfix">
+            <h4 class="panel-title pull-left" style="padding-top: 7.5px;">Teams</h4>
+            <div class="btn-group pull-right">
+                <button class="btn btn-info" onclick="$('#addTeam').removeAttr('hidden')"><i class="glyphicon glyphicon-plus"></i> New Team</button>
+            </div>
+        </div>
         <div class="panel-body">
-            <table id="teamsTable" class="table table-striped table-bordered dt" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Name</th>
-                        <th>Nationality</th>
-                        <th>Wikipedia</th>
-                        <th>Pilots (Id)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var t in Model)
+            <div id="addTeam" hidden="hidden">
+                @using (Html.BeginForm("AddTeam", "Admin"))
+                {
+                    foreach (var property in Model.First().GetType().GetProperties())
                     {
-                        <tr>
-                            <td>@t.TeamId</td>
-                            <td>@t.TeamName</td>
-                            <td>@t.TeamNationality</td>
-                            <td>@t.TeamUrl</td>
-                            <td>
-                                @foreach (var p in @t.Pilots)
-                                {
-                                    <p>@p.PilotFName @p.PilotLName (@p.PilotId) </p>
-                                }
-                            </td>
-                        </tr>
+                        if (property.Name != "TeamId" && property.Name != "Pilots" && property.Name != "TeamStandings" && property.Name != "Results")
+                        {
+                            <div class="form-group col-lg-6">
+                                <label>@property.Name</label>
+                                @Html.TextBox(property.Name, null, new { @class = "form-control" })
+                            </div>
+                        }
                     }
-                </tbody>
-            </table>
+                    <div class="col-lg-12 text-center">
+                        <button class="btn btn-success" type="submit" value="insert">Insert</button>
+                        <button class="btn btn-danger" type="button" value="Cancel" onclick="$('#addTeam').attr('hidden','hidden')">Cancel</button>
+                    </div>
+                }
+            </div>
+            <div class="panel-body">
+                <table id="teamsTable" class="table table-striped table-bordered dt" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Name</th>
+                            <th>Nationality</th>
+                            <th>Wikipedia</th>
+                            <th>Pilots (Id)</th>
+                            <th>Edit</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var t in Model)
+                        {
+                            <tr>
+                                <td isid="true" name="TeamId">@t.TeamId</td>
+                                <td name="TeamName">@t.TeamName</td>
+                                <td name="TeamNationality">@t.TeamNationality</td>
+                                <td name="TeamUrl">@t.TeamUrl</td>
+                                <td class="noInput">
+                                    @foreach (var p in @t.Pilots)
+                                    {
+                                        <p>@p.PilotFName @p.PilotLName (@p.PilotId) </p>
+                                    }
+                                </td>
+                                <td class="text-center noInput">
+                                    <button type="button" class="submitButton btn btn-success btn-circle validate hidden" submitUrl="SaveTeam"><i class="glyphicon glyphicon-ok"></i></button>
+                                    <button type="button" class="btn btn-danger btn-circle cancel hidden"><i class="glyphicon glyphicon-remove"></i></button>
+                                    <button type="button" class="btn btn-success btn-circle edit"><i class="glyphicon glyphicon-edit"></i></button>
+                                    <button type="button" class="btn btn-danger btn-circle remove" onclick="confirmDelete('Are you sure to delete team with id : '+@t.TeamId,'@Url.Action("DeleteTeam", "Admin", new { teamId = t.TeamId})')"><i class="glyphicon glyphicon-trash"></i></button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
