--- a/F1App/F1App.WebUI/Views/List/TeamList.cshtml
+++ b/F1App/F1App.WebUI/Views/List/TeamList.cshtml
@@ -31,7 +31,7 @@
                             <td>@t.TeamId</td>
                             <td>@t.TeamName</td>
                             <td>@t.TeamNationality</td>
-                            <td>@t.TeamUrl</td>
+                            <td><a href=@t.TeamUrl>t.TeamUrl</a>@</td>
                             <td edit="false">
                                 @foreach(var p in @t.Pilots)
                                 {
