--- a/F1App/F1App.WebUI/Views/Admin/TeamListAdmin.cshtml
+++ b/F1App/F1App.WebUI/Views/Admin/TeamListAdmin.cshtml
@@ -1,4 +1,5 @@
 ﻿@using F1App.Domain
+@using System.ComponentModel.DataAnnotations
 @model IQueryable<Team>
 @{
     ViewBag.Title = "Team List Admin";
@@ -22,10 +23,15 @@
                 {
                     foreach (var property in Model.First().GetType().GetProperties())
                     {
+                        var displayName = "";
+                        if (property.GetCustomAttributes(typeof(DisplayAttribute), true).Count() != 0)
+                        {
+                            displayName = property.GetCustomAttributes(typeof(DisplayAttribute), true).Cast<DisplayAttribute>().Single().Name;
+                        }
                         if (property.Name != "TeamId" && property.Name != "Pilots" && property.Name != "TeamStandings" && property.Name != "Results")
                         {
                             <div class="form-group col-lg-6">
-                                <label>@property.Name</label>
+                                <label>@(displayName!=""?displayName:property.Name)</label>
                                 @Html.TextBox(property.Name, null, new { @class = "form-control" })
                             </div>
                         }
